--- a/package.json
+++ b/package.json
@@ -60,8 +60,9 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "dependencies": {
+        "highlight.js": "^9.3.0",
         "markdown-it": "^6.0.1",
-        "highlight.js": "^9.3.0"
+        "markdown-it-named-headers": "0.0.4"
     },
     "devDependencies": {
         "typescript": "^1.8.5",
